namespace Data.AnimationTags
{
    public static class AnimationParams
    {
        public const string ZOOM_IN_AIM = "Zoom In";
        public const string ZOOM_OUT_AIM = "Zoom Out";

        public const string SHOOT_TRIGGER = "Shoot";
        public const string PERFORM_ATTACK = "Attack";
        public const string PERFORM_ATTACK_ACTION = "Attack Action";

        public const string IS_ITEM_EQUIPED = "Is Equiped";
        public const string IS_ITEM_READY = "Is Ready";

        public const string RELOAD_TRIGGER = "Reload";
        public const string SWITCH_MODE_TRIGGER = "Switch Mode";

        public const string HIDE = "Hide";

        public const string WALK = "Walk";
        public const string RUN = "Run";
        public const string JUMP = "Jump";
    }
}